Fix sonar feil, EttersendingsType, vedlegg og fjerner asArray. (#101)
* Fikser sonarcloud feil.
Endrer EttersendingsType enum til caps.
Field i Vedlegg.class endres fra vedlegg til innhold
StønadskontoType fjernes fra utsettelsesperioder

* Logger kan være private her

* Unødvendig å finne opp "Pair" på nytt når vi kan bruke fra apache

* Erstatter asArray med List.of (OBS immutable)

* Legger til @JsonAlias ved bytte av navn på vedlegg i Vedlegg.java
Mer beksrivende tekst på @Override gettere for records

* Expand contract på enum også: Legger til @JsonAlias på EttersendingsType